--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-autoprefixer": "0.7.2",
+    "grunt-csscomb": "~2.0.1",
     "grunt-notify": "~0.2.20",
     "grunt-banner": "~0.2.2"
   },
