--- a/bower.json
+++ b/bower.json
@@ -4,5 +4,10 @@
   "description": "Gengo style guide",
   "dependencies": {
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "components"
+  ]
 }
