--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "gengo-style-guide",
+  "name": "style-guide",
   "version": "0.0.1",
   "description": "Gengo style guide",
   "dependencies": {
