--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
 {
-  "name": "style-guide",
+  "name": "gengo-style-guide",
   "version": "0.0.1",
   "description": "Gengo style guide",
   "dependencies": {
+    "twbs/bootstrap-sass": "latest"
   },
   "devDependencies": {},
   "ignore": [
