--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "grunt-csscomb": "~2.0.1",
     "grunt-notify": "~0.2.20",
     "grunt-banner": "~0.2.2",
-    "grunt-newer": "~0.7.0"
+    "grunt-newer": "~0.7.0",
+    "time-grunt": "^0.3.1"
   },
   "engines": {
     "node": ">=0.8.0"
