--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.3",
   "description": "Gengo style guide",
   "dependencies": {
+    "bootstrap-sass-official": "~3.1.1"
   },
   "devDependencies": {},
   "ignore": [
