Update main property

--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,30 @@
   "name": "gengo-style-guide",
   "version": "0.0.3",
   "description": "Gengo style guide",
+  "main": [
+    "css/gengo-bootstrap-theme.css",
+    "css/gengo.css",
+    "fonts/OpenSans-Bold-webfont.eot",
+    "fonts/OpenSans-Italic-webfont.eot",
+    "fonts/OpenSans-Regular-webfont.eot",
+    "fonts/penSans-Semibold-webfont.eot",
+    "fonts/icomoon.eot",
+    "fonts/icomoon.woff",
+    "fonts/penSans-Bold-webfont.ttf",
+    "fonts/OpenSans-Italic-webfont.ttf",
+    "fonts/OpenSans-Regular-webfont.ttf",
+    "fonts/penSans-Semibold-webfont.ttf",
+    "fonts/icomoon.svg",
+    "fonts/penSans-Bold-webfont.woff",
+    "fonts/penSans-Italic-webfont.woff",
+    "fonts/penSans-Regular-webfont.woff",
+    "fonts/OpenSans-Semibold-webfont.woff",
+    "fonts/comoon.ttf",
+    "images/logo_admin.svg",
+    "images/logo_developer.svg",
+    "images/logo_gengo.svg",
+    "images/logo_translator.svg"
+  ],
   "dependencies": {
     "bootstrap-sass-official": "~3.1.1"
   },
