--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "Gengo, Inc.",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "jit-grunt": "0.3.2",
+    "grunt": "~0.4.4",
+    "grunt-cli": "0.1.13",
+    "jit-grunt": "0.6.0",
     "grunt-contrib-watch": "~0.6.*",
     "grunt-contrib-connect": "~0.7.*",
     "grunt-contrib-compass": "~0.7.*",
@@ -15,9 +16,9 @@
     "grunt-contrib-cssmin": "~0.9.*",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-autoprefixer": "0.7.2",
+    "grunt-autoprefixer": "0.7.*",
     "grunt-csscomb": "~2.0.1",
-    "grunt-notify": "~0.2.20",
+    "grunt-notify": "~0.3.0",
     "grunt-banner": "~0.2.2",
     "grunt-newer": "~0.7.0",
     "time-grunt": "^0.3.1"
