--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "author": "Gengo, Inc.",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.4",
+    "grunt": "~0.4.5",
     "grunt-cli": "0.1.13",
-    "jit-grunt": "0.6.0",
+    "jit-grunt": "0.7.0",
     "grunt-contrib-watch": "~0.6.*",
     "grunt-contrib-connect": "~0.7.*",
-    "grunt-contrib-compass": "~0.7.*",
+    "grunt-contrib-compass": "~0.8.*",
     "grunt-contrib-csslint": "~0.2.0",
     "grunt-contrib-cssmin": "~0.9.*",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-autoprefixer": "0.7.*",
+    "grunt-autoprefixer": "0.7.3",
     "grunt-csscomb": "~2.0.1",
     "grunt-notify": "~0.3.0",
     "grunt-banner": "~0.2.2",
