Update package.json for not showing 'npm WARN package.json gengo@0.0.3 No repository field.'

--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   },
   "engines": {
     "node": ">=0.8.0"
+  },
+  "repository":{
+    "type":"git",
+    "url": "git@github.com:gengo/style-guide.git"
   }
 }
