--- a/package.json
+++ b/package.json
@@ -7,27 +7,28 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-autoprefixer": "0.7.3",
+    "grunt-banner": "~0.2.2",
     "grunt-cli": "0.1.13",
-    "jit-grunt": "0.7.0",
-    "grunt-contrib-watch": "~0.6.*",
-    "grunt-contrib-connect": "~0.7.*",
+    "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compass": "~0.8.*",
+    "grunt-contrib-connect": "~0.7.*",
+    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-csslint": "~0.2.0",
     "grunt-contrib-cssmin": "~0.9.*",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-autoprefixer": "0.7.3",
+    "grunt-contrib-watch": "~0.6.*",
     "grunt-csscomb": "~2.0.1",
-    "grunt-notify": "~0.3.0",
-    "grunt-banner": "~0.2.2",
+    "grunt-jekyll": "^0.4.2",
     "grunt-newer": "~0.7.0",
+    "grunt-notify": "~0.3.0",
+    "jit-grunt": "0.7.0",
     "time-grunt": "^0.3.1"
   },
   "engines": {
     "node": ">=0.8.0"
   },
-  "repository":{
-    "type":"git",
+  "repository": {
+    "type": "git",
     "url": "git@github.com:gengo/style-guide.git"
   }
 }
