[#73270866]update Gruntfile and rearrange file,directory

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,6 @@ highlighter:      pygments
 permalink:        pretty
 
 # Server
-source:           html
-destination:      demo
+source:           liquid
+destination:      html
 encoding:         UTF-8
