edit 'chmod' problems in setup.sh,deploy.sh
update .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: node_js
-
 install: ./setup.sh
 script: grunt dist
 after_success: ./deploy.sh
@@ -7,3 +6,4 @@ env:
   global:
   - DEPLOY_BRANCH="gh-pages"
   - GH_REPO="gengo/style-guide"
+  - secure: gyleTUmfoIgmAAgf8eOjjcPG/GCTqLIbFwkFBREfLPjO6rAgK4+q20QECI/dPCwkgzumExjTNq+OYT6YEDCWy2e5F/yptn2/DAmOOXvek7RwSyDGnoYAPbqDyaw/RP+cYcIgXbY91YwbnIkPhaJoWjHUqxAqTAlc6v9Mkk5TfGA=
