--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.3",
   "description": "Gengo style guide",
   "dependencies": {
-    "bootstrap-sass-official": "~3.1.1"
+    "bootstrap-sass-official": "~3.1.1",
+    "bootstrap": "https://github.com/twbs/bootstrap.git#gh-pages"
   },
   "devDependencies": {},
   "ignore": [
