--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-autoprefixer": "0.7.3",
-    "grunt-banner": "~0.2.2",
-    "grunt-cli": "0.1.13",
+    "grunt-autoprefixer": "~0.8.*",
+    "grunt-banner": "~0.2.3",
+    "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-compass": "~0.8.*",
-    "grunt-contrib-connect": "~0.7.*",
+    "grunt-contrib-compass": "~0.9.*",
+    "grunt-contrib-connect": "~0.8.*",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-csslint": "~0.2.0",
-    "grunt-contrib-cssmin": "~0.9.*",
+    "grunt-contrib-cssmin": "~0.10.*",
     "grunt-contrib-watch": "~0.6.*",
     "grunt-csscomb": "~2.0.1",
     "grunt-jekyll": "^0.4.2",
     "grunt-newer": "~0.7.0",
-    "grunt-notify": "~0.3.0",
-    "jit-grunt": "0.7.0",
+    "grunt-notify": "^0.3.0",
+    "jit-grunt": "^0.7.0",
     "time-grunt": "^0.3.1"
   },
   "engines": {
