--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-jekyll": "^0.4.2",
     "grunt-newer": "~0.7.0",
     "grunt-notify": "^0.3.0",
+    "grunt-scss-lint": "^0.1.12",
     "jit-grunt": "^0.7.0",
     "time-grunt": "^0.3.1"
   },
