--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compass": "~0.9.*",
+    "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-connect": "~0.8.*",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-csslint": "~0.2.0",
