--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,14 @@
-{
+s{
   "name": "gengo-style-guide",
   "version": "0.0.3",
   "description": "Gengo style guide",
   "dependencies": {
     "bootstrap-sass-official": "~3.1.1",
     "bootstrap-docs": "https://github.com/twbs/bootstrap.git#gh-pages",
-    "bootstrap-multiselect": "~0.9.6"
+    "bootstrap-multiselect": "~0.9.6",
+    "x-editable": "~1.5.1"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "ignore": [
     "**/.*",
     "node_modules",
