--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-csslint": "~0.2.0",
     "grunt-contrib-cssmin": "~0.10.*",
     "grunt-contrib-watch": "~0.6.*",
+    "grunt-html-validation": "~0.1.18",
     "grunt-csscomb": "~3.0.0",
     "grunt-jekyll": "^0.4.2",
     "grunt-newer": "~0.7.0",
