--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-autoprefixer": "~0.8.*",
+    "grunt-autoprefixer": "^1.0.0",
     "grunt-banner": "~0.2.3",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-compass": "~0.9.*",
+    "grunt-contrib-compass": "^0.9.1",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-connect": "~0.8.*",
     "grunt-contrib-copy": "~0.5.0",
@@ -24,8 +24,8 @@
     "grunt-newer": "~0.7.0",
     "grunt-notify": "^0.3.0",
     "grunt-scss-lint": "^0.1.12",
-    "jit-grunt": "^0.7.0",
-    "time-grunt": "^0.3.1"
+    "jit-grunt": "^0.8.0",
+    "time-grunt": "^0.4.0"
   },
   "engines": {
     "node": ">=0.8.0"
