move docs related content into ./docs and update Gruntfile to work with that

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,9 @@ highlighter:      pygments
 permalink:        pretty
 
 # Server
-source:           liquid
-destination:      html
+source:           docs
+destination:      _gh_pages
+host:             0.0.0.0
+port:             9001
+baseurl:          /
 encoding:         UTF-8
