--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-autoprefixer": "^1.0.1",
-    "grunt-banner": "~0.2.3",
     "grunt-cli": "~0.1.13",
+    "grunt-autoprefixer": "~3.0.0",
+    "grunt-banner": "~0.3.1",
     "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-compass": "^0.9.1",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "~0.8.*",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-csslint": "~0.3.1",
-    "grunt-contrib-cssmin": "~0.10.*",
-    "grunt-contrib-watch": "~0.6.*",
+    "grunt-contrib-compass": "^1.0.3",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-connect": "~0.10.1",
+    "grunt-contrib-copy": "~0.8.0",
+    "grunt-contrib-csslint": "~0.4.0",
+    "grunt-contrib-cssmin": "~0.12.2",
+    "grunt-contrib-watch": "~0.6.1",
     "grunt-csscomb": "~3.0.0",
     "grunt-html-validation": "~0.1.18",
-    "grunt-jekyll": "^0.4.2",
-    "grunt-newer": "~0.7.0",
-    "grunt-notify": "^0.3.1",
-    "grunt-scss-lint": "^0.3.3",
-    "jit-grunt": "^0.8.0",
-    "time-grunt": "^1.0.0"
+    "grunt-jekyll": "~0.4.2",
+    "grunt-newer": "~1.1.0",
+    "grunt-notify": "^0.4.1",
+    "grunt-scss-lint": "^0.3.6",
+    "jit-grunt": "^0.9.1",
+    "time-grunt": "^1.1.1"
   },
   "engines": {
     "node": ">=0.8.0"
