--- a/docs/_data/icons.yml
+++ b/docs/_data/icons.yml
@@ -1,49 +1,48 @@
-- warning
 - half
 - circle
 - funnel
-- validation
-- memory
-- menu
+- info
 - success
+- warning
 - error
 - hold
-- expand
-- user
-- settings
-- refresh
+- validation
 - tooltip
+- memory
+- menu
+- settings
+- more
 - top
 - previous
 - next
 - down
 - check
 - close
-- message
-- comment
+- start
+- play
 - global
+- expand
 - minimize
-- info
 - vertical
 - horizontal
-- trash
 - search
-- find
 - share
 - flag
-- create
 - notification
 - activity
 - unlocked
 - locked
 - database
-- transfer
-- start
-- play
 - file
+- transfer
 - download
 - star
 - print
-- email
-- archive
+- create
 - edit
+- user
+- email
+- comment
+- refresh
+- archive
+- trash
