--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "url": "git@github.com:gengo/style-guide.git"
   },
   "scripts": {
-    "dev": "node_modules/grunt-cli/bin/grunt dev",
-    "build": "node_modules/grunt-cli/bin/grunt build"
+    "dev": "grunt dev",
+    "build": "grunt build"
   }
 }
