[#121272913] Fixed grid-gutter-width value & Update bootstrap version to 3.3.6 (#101)
* Fixed 2x image file name rule

* Fixed csslint error

* Fixed grid-gutter-width value to fit grid-columns change value

* Added script commands

* Updated bootstrap version to latest

* Updated dist files

* Updated version to 0.1.0

* Removed prefix from package.json scripts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gengo",
-  "version": "0.0.5",
+  "version": "0.1.0",
   "description": "Gengo style guide",
   "homepage": "https://github.com/gengo/style-guide",
   "author": "Gengo, Inc.",
@@ -18,7 +18,7 @@
     "grunt-contrib-csslint": "~0.4.0",
     "grunt-contrib-cssmin": "~0.12.2",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-csscomb": "~3.0.0",
+    "grunt-csscomb": "~3.1.0",
     "grunt-html-validation": "~0.1.18",
     "grunt-jekyll": "~0.4.2",
     "grunt-newer": "~1.1.0",
@@ -33,5 +33,9 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:gengo/style-guide.git"
+  },
+  "scripts": {
+    "dev": "grunt dev",
+    "build": "grunt build"
   }
 }
