--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gengo",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Gengo style guide",
   "homepage": "https://github.com/gengo/style-guide",
   "author": "Gengo, Inc.",
@@ -9,6 +9,7 @@
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "~3.0.0",
     "grunt-banner": "~0.3.1",
+    "grunt-bower-task": "^0.4.0",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-compass": "^1.0.3",
