--- a/package.json
+++ b/package.json
@@ -4,7 +4,17 @@
   "description": "Gengo style guide",
   "homepage": "https://github.com/gengo/style-guide",
   "author": "Gengo, Inc.",
-  "dependencies": {},
+  "dependencies": {
+    "@bower_components/bootstrap": "twbs/bootstrap#~3.3.7",
+    "@bower_components/bootstrap-docs": "twbs/bootstrap#gh-pages",
+    "@bower_components/bootstrap-multiselect": "davidstutz/bootstrap-multiselect#0.9.13",
+    "@bower_components/bootstrap-sass-official": "twbs/bootstrap-sass#~3.3.6",
+    "@bower_components/jquery": "jquery/jquery-dist#>= 1.7.1",
+    "@bower_components/moment": "moment/moment#~2.8.2",
+    "@bower_components/select2": "ivaynberg/select2#~3.5.1",
+    "@bower_components/typeahead.js": "twitter/typeahead.js#~0.10.5",
+    "@bower_components/x-editable": "vitalets/x-editable#~1.5.1"
+  },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "~3.0.0",
@@ -29,7 +39,8 @@
     "time-grunt": "^1.1.1"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=0.8.0",
+    "yarn": ">= 1.0.0"
   },
   "repository": {
     "type": "git",
@@ -37,6 +48,7 @@
   },
   "scripts": {
     "dev": "bundle exec grunt dev",
-    "build": "bundle exec grunt build"
+    "build": "bundle exec grunt build",
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'bower_components', 'junction') } catch (e) { }\""
   }
 }
