--- a/package.json
+++ b/package.json
@@ -1,10 +1,31 @@
 {
   "name": "gengo",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Gengo style guide",
   "homepage": "https://github.com/gengo/style-guide",
   "author": "Gengo, Inc.",
-  "dependencies": {},
+  "license": "UNLICENSED",
+  "private": true,
+  "dependencies": {
+    "@bower_components/bootstrap": "twbs/bootstrap#~3.3.7",
+    "@bower_components/bootstrap-docs": "twbs/bootstrap#gh-pages",
+    "@bower_components/bootstrap-multiselect": "davidstutz/bootstrap-multiselect#0.9.13",
+    "@bower_components/bootstrap-sass-official": "twbs/bootstrap-sass#~3.3.6",
+    "@bower_components/jquery": "jquery/jquery-dist#>= 1.11.0",
+    "@bower_components/moment": "moment/moment#~2.8.2",
+    "@bower_components/select2": "ivaynberg/select2#~3.5.1",
+    "@bower_components/typeahead.js": "twitter/typeahead.js#~0.10.5",
+    "@bower_components/x-editable": "vitalets/x-editable#~1.5.1",
+    "bootstrap": "^5.1.3",
+    "bootstrap-docs": "^1.0.0",
+    "bootstrap-multiselect": "^1.1.0",
+    "bootstrap-sass": "^3.4.3",
+    "jquery": "^3.6.0",
+    "moment": "^2.29.2",
+    "select2": "^4.1.0-rc.0",
+    "typeahead.js": "^0.11.1",
+    "x-editable": "^1.5.1"
+  },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "~3.0.0",
@@ -29,7 +50,8 @@
     "time-grunt": "^1.1.1"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=0.8.0",
+    "yarn": ">= 1.0.0"
   },
   "repository": {
     "type": "git",
@@ -37,6 +59,7 @@
   },
   "scripts": {
     "dev": "bundle exec grunt dev",
-    "build": "bundle exec grunt build"
+    "build": "bundle exec grunt build",
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'bower_components', 'junction') } catch (e) { }\""
   }
 }
