--- a/package.json
+++ b/package.json
@@ -7,15 +7,6 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@bower_components/bootstrap": "twbs/bootstrap#~3.3.7",
-    "@bower_components/bootstrap-docs": "twbs/bootstrap#gh-pages",
-    "@bower_components/bootstrap-multiselect": "davidstutz/bootstrap-multiselect#0.9.13",
-    "@bower_components/bootstrap-sass-official": "twbs/bootstrap-sass#~3.3.6",
-    "@bower_components/jquery": "jquery/jquery-dist#>= 1.11.0",
-    "@bower_components/moment": "moment/moment#~2.8.2",
-    "@bower_components/select2": "ivaynberg/select2#~3.5.1",
-    "@bower_components/typeahead.js": "twitter/typeahead.js#~0.10.5",
-    "@bower_components/x-editable": "vitalets/x-editable#~1.5.1",
     "bootstrap": "^5.1.3",
     "bootstrap-docs": "^1.0.0",
     "bootstrap-multiselect": "^1.1.0",
@@ -59,7 +50,6 @@
   },
   "scripts": {
     "dev": "bundle exec grunt dev",
-    "build": "bundle exec grunt build",
-    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'bower_components', 'junction') } catch (e) { }\""
+    "build": "bundle exec grunt build"
   }
 }
