--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,11 @@ language: node_js
 cache:
   directories:
   - vendor/bundle
-  - bower_components
   - node_modules
 node_js:
 - 4.7.0
 install: "./setup.sh"
-script: npm run build
+script: yarn build
 after_success: "./deploy.sh"
 env:
   global:
