--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "description": "Gengo style guide",
   "homepage": "https://github.com/gengo/style-guide",
   "author": "Gengo, Inc.",
-  "dependencies": {},
+  "license": "UNLICENSED",
+  "private": true,
+  "dependencies": {
+    "bootstrap": "~3.3.7",
+    "bootstrap-docs": "^1.0.0",
+    "bootstrap-multiselect": "0.9.13",
+    "bootstrap-sass": "~3.3.6",
+    "jquery": "1.6",
+    "moment": "~2.8.2",
+    "select2": "~3.5.1",
+    "typeahead.js": "~0.10.5",
+    "x-editable": "~1.5.1"
+  },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "~3.0.0",
     "grunt-banner": "~0.3.1",
-    "grunt-bower-task": "^0.4.0",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-compass": "^1.0.3",
@@ -29,7 +40,8 @@
     "time-grunt": "^1.1.1"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=0.8.0",
+    "yarn": ">= 1.0.0"
   },
   "repository": {
     "type": "git",
