--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "bootstrap-docs": "^1.0.0",
     "bootstrap-multiselect": "0.9.13",
     "bootstrap-sass": "~3.3.6",
-    "jquery": "1.9",
+    "jquery": "~1",
     "moment": "~2.8.2",
-    "popper.js": "1.16",
+    "popper.js": "~1.16",
     "select2": "~3.5.1",
     "typeahead.js": "~0.10.5",
     "x-editable": "~1.5.1"
