--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "bootstrap": "~3.3.7",
+    "bootstrap": "^5.0",
     "bootstrap-docs": "^1.0.0",
+    "bootstrap-icons": "^1.9.1",
     "bootstrap-multiselect": "0.9.13",
     "bootstrap-sass": "~3.3.6",
+    "coffeescript": "^2.7.0",
     "jquery": "1.6",
     "moment": "~2.8.2",
+    "sass": "^1.0",
     "select2": "~3.5.1",
     "typeahead.js": "~0.10.5",
     "x-editable": "~1.5.1"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
+    "grunt": "^1.5.0",
     "grunt-autoprefixer": "~3.0.0",
     "grunt-banner": "~0.3.1",
     "grunt-cli": "~0.1.13",
