--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-stylelint": "0.18",
     "jquery": "1.6",
     "moment": "~2.8.2",
+    "sass": "^1.54.9",
     "select2": "~3.5.1",
     "stylelint": "^14.11",
     "stylelint-config-twbs-bootstrap": "^6.0.0",
@@ -51,7 +52,10 @@
   },
   "scripts": {
     "dev": "bundle exec grunt dev",
-    "build": "bundle exec grunt build"
+    "build": "bundle exec grunt build",
+    "clean": "bundle exec grunt clean",
+    "concat": "bundle exec grunt concat",
+    "sass": "bundle exec grunt build-css"
   },
   "stylelint": {
     "extends": "stylelint-config-twbs-bootstrap"
