--- a/package.json
+++ b/package.json
@@ -9,18 +9,16 @@
   "dependencies": {
     "bootstrap": "^5.0",
     "bootstrap-icons": "^1.9.1",
-    "bootstrap-multiselect": "0.9.13",
     "coffeescript": "^2.7.0",
     "grunt-sass": "^3.1.0",
     "grunt-stylelint": "0.18",
     "jquery": "1.6",
     "moment": "~2.8.2",
     "sass": "^1.54.9",
-    "select2": "~3.5.1",
+    "select2": "^4.0",
     "stylelint": "^14.11",
     "stylelint-config-twbs-bootstrap": "^6.0.0",
-    "typeahead.js": "~0.10.5",
-    "x-editable": "~1.5.1"
+    "typeahead.js": "~0.10.5"
   },
   "devDependencies": {
     "grunt": "^1.5.0",
